tests/ui/parser/doc-before-syntax-error.stderr
error: expected identifier, found `<`
  --> $DIR/doc-before-syntax-error.rs:2:1
   |
LL | <>
   | ^ expected identifier

error: aborting due to 1 previous error

