tests/ui/parser/doc-before-syntax-error.rs
/// Some documentation
<> //~ ERROR expected identifier
